website/versioned_docs/version-1.1.1/tutorials/getting_started/index.mdx
---
title: Getting Started with Ax
sidebar_label: Getting Started with Ax
---

import LinkButtons from "@site/src/components/LinkButtons.jsx";
import CellOutput from "@site/src/components/CellOutput.jsx";
import {PlotlyFigure} from "@site/src/components/Plotting.jsx";

<LinkButtons
  githubUrl="https://github.com/facebook/ax/blob/main/tutorials/getting_started/getting_started.ipynb"
  colabUrl="https://colab.research.google.com/github/facebook/ax/blob/main/tutorials/getting_started/getting_started.ipynb"
/>

# Getting Started with Ax

Complex optimization problems where we wish to tune multiple parameters to improve
metric performance, but the inter-parameter interactions are not fully understood, are
common across various fields including machine learning, robotics, materials science,
and chemistry. This category of problem is known as "black-box" optimization. The
complexity of black-box optimization problems further increases if evaluations are
expensive to conduct, time-consuming, or noisy.

We can use Ax to efficiently conduct an experiment in which we "ask" for candidate
points to evaluate, "tell" Ax the results, and repeat. We'll uses Ax's `Client`, a tool
for managing the state of our experiment, and we'll learn how to define an optimization
problem, configure an experiment, run trials, analyze results, and persist the
experiment for later use using the `Client`.

Because Ax is a black box optimizer, we can use it to optimize any arbitrary function.
In this example we will minimize the
[Hartmann6 function](https://www.sfu.ca/~ssurjano/hart6.html), a complicated
6-dimensional function with multiple local minima. Hartmann6 is a challenging benchmark
for optimization algorithms commonly used in the global optimization literature -- it
tests the algorithm's ability to identify the true global minimum, rather than
mistakenly converging on a local minimum. Looking at its analytic form we can see that
it would be incredibly challenging to efficiently find the global minimum either by
manual trial-and-error or traditional design of experiments like grid-search or
random-search.

$$

f(\mathbf{x})=-\sum_{i=1}^4 \alpha_i \exp \left(-\sum_{j=1}^6 A_{i j}\left(x_j-P_{i j}\right)^2\right)

$$

### Learning Objectives

- Understand the basic concepts of black box optimization
- Learn how to define an optimization problem using Ax
- Configure and run an experiment using Ax's `Client`
- Analyze the results of the optimization

### Prerequisites

- Familiarity with Python and basic programming concepts
- Understanding of [adaptive experimentation](../../intro-to-ae.mdx) and
  [Bayesian optimization](../../intro-to-bo.mdx)

## Step 1: Import Necessary Modules

First, ensure you have all the necessary imports:

```python
import numpy as np
from ax.api.client import Client
from ax.api.configs import RangeParameterConfig
```

## Step 2: Initialize the Client

Create an instance of the `Client` to manage the state of your experiment.

```python
client = Client()
```

## Step 3: Configure the Experiment

The `Client` instance can be configured with a series of `Config`s that define how the
experiment will be run.

The Hartmann6 problem is usually evaluated on the hypercube $x_i \in (0, 1)$, so we will
define six identical `RangeParameterConfig`s with these bounds.

You may specify additional features like parameter constraints to further refine the
search space and parameter scaling to help navigate parameters with nonuniform effects.

```python
# Define six float parameters x1, x2, x3, ... for the Hartmann6 function, which is typically evaluated on the unit hypercube
parameters = [
    RangeParameterConfig(
        name="x1", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x2", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x3", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x4", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x5", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x6", parameter_type="float", bounds=(0, 1)
    ),
]

client.configure_experiment(parameters=parameters)
```

## Step 4: Configure Optimization

Now, we must configure the objective for this optimization, which we do using
`Client.configure_optimization`. This method expects a string `objective`, an expression
containing either a single metric to maximize, a linear combination of metrics to
maximize, or a tuple of multiple metrics to jointly maximize. These expressions are
parsed using [SymPy](https://www.sympy.org/en/index.html). For example:

- `"score"` would direct Ax to maximize a metric named score
- `"-loss"` would direct Ax to Ax to minimize a metric named loss
- `"task_0 + 0.5 * task_1"` would direct Ax to maximize the sum of two task scores,
  downweighting task_1 by a factor of 0.5
- `"score, -flops"` would direct Ax to simultaneously maximize score while minimizing
  flops

See these recipes for more information on configuring
[objectives](../../recipes/multi-objective-optimization) and
[outcome constraints](../../recipes/outcome-constraints).

```python
metric_name = "hartmann6" # this name is used during the optimization loop in Step 5
objective = f"-{metric_name}" # minimization is specified by the negative sign

client.configure_optimization(objective=objective)
```

## Step 5: Run Trials

Here, we will configure the ask-tell loop.

We begin by defining the Hartmann6 function as written above. Remember, this is just an
example problem and any Python function can be substituted here.

```python
# Hartmann6 function
def hartmann6(x1, x2, x3, x4, x5, x6):
    alpha = np.array([1.0, 1.2, 3.0, 3.2])
    A = np.array([
        [10, 3, 17, 3.5, 1.7, 8],
        [0.05, 10, 17, 0.1, 8, 14],
        [3, 3.5, 1.7, 10, 17, 8],
        [17, 8, 0.05, 10, 0.1, 14]
    ])
    P = 10**-4 * np.array([
        [1312, 1696, 5569, 124, 8283, 5886],
        [2329, 4135, 8307, 3736, 1004, 9991],
        [2348, 1451, 3522, 2883, 3047, 6650],
        [4047, 8828, 8732, 5743, 1091, 381]
    ])

    outer = 0.0
    for i in range(4):
        inner = 0.0
        for j, x in enumerate([x1, x2, x3, x4, x5, x6]):
            inner += A[i, j] * (x - P[i, j])**2
        outer += alpha[i] * np.exp(-inner)
    return -outer

hartmann6(0.1, 0.45, 0.8, 0.25, 0.552, 1.0)
```

<CellOutput>
{
`np.float64(-0.4878737485613134)`
}
</CellOutput>

### Optimization Loop

We will iteratively call `client.get_next_trials` to "ask" Ax for a parameterization to
evaluate, then call `hartmann6` using those parameters, and finally "tell" Ax the result
using `client.complete_trial`.

This loop will run multiple trials to optimize the function.

```python
for _ in range(10): # Run 10 rounds of trials
    # We will request three trials at a time in this example
    trials = client.get_next_trials(max_trials=3)

    for trial_index, parameters in trials.items():
        x1 = parameters["x1"]
        x2 = parameters["x2"]
        x3 = parameters["x3"]
        x4 = parameters["x4"]
        x5 = parameters["x5"]
        x6 = parameters["x6"]

        result = hartmann6(x1, x2, x3, x4, x5, x6)

        # Set raw_data as a dictionary with metric names as keys and results as values
        raw_data = {metric_name: result}

        # Complete the trial with the result
        client.complete_trial(trial_index=trial_index, raw_data=raw_data)
```

<CellOutput>
{
`[INFO 09-05 18:04:10] ax.api.client: GenerationStrategy(name='Center+Sobol+MBM:fast', nodes=[CenterGenerationNode(next_node_name='Sobol'), GenerationNode(node_name='Sobol', generator_specs=[GeneratorSpec(generator_enum=Sobol, model_key_override=None)], transition_criteria=[MinTrials(transition_to='MBM'), MinTrials(transition_to='MBM')]), GenerationNode(node_name='MBM', generator_specs=[GeneratorSpec(generator_enum=BoTorch, model_key_override=None)], transition_criteria=[])]) chosen based on user input and problem structure.
[INFO 09-05 18:04:10] ax.api.client: Generated new trial 0 with parameters {'x1': 0.5, 'x2': 0.5, 'x3': 0.5, 'x4': 0.5, 'x5': 0.5, 'x6': 0.5} using GenerationNode CenterOfSearchSpace.
[INFO 09-05 18:04:10] ax.api.client: Generated new trial 1 with parameters {'x1': 0.451786, 'x2': 0.010206, 'x3': 0.232599, 'x4': 0.787996, 'x5': 0.409147, 'x6': 0.338929} using GenerationNode Sobol.
[INFO 09-05 18:04:10] ax.api.client: Generated new trial 2 with parameters {'x1': 0.960501, 'x2': 0.903653, 'x3': 0.942044, 'x4': 0.027124, 'x5': 0.868936, 'x6': 0.832959} using GenerationNode Sobol.
[INFO 09-05 18:04:10] ax.api.client: Trial 0 marked COMPLETED.
[INFO 09-05 18:04:10] ax.api.client: Trial 1 marked COMPLETED.
[INFO 09-05 18:04:10] ax.api.client: Trial 2 marked COMPLETED.
[INFO 09-05 18:04:11] ax.api.client: Generated new trial 3 with parameters {'x1': 0.537996, 'x2': 0.336122, 'x3': 0.429307, 'x4': 0.571709, 'x5': 0.664401, 'x6': 0.667343} using GenerationNode Sobol.
[INFO 09-05 18:04:11] ax.api.client: Generated new trial 4 with parameters {'x1': 0.062275, 'x2': 0.702228, 'x3': 0.653404, 'x4': 0.363537, 'x5': 0.112693, 'x6': 0.160885} using GenerationNode Sobol.
[WARNING 09-05 18:04:11] ax.api.client: 3 trials requested but only 2 could be generated.
[INFO 09-05 18:04:11] ax.api.client: Trial 3 marked COMPLETED.
[INFO 09-05 18:04:11] ax.api.client: Trial 4 marked COMPLETED.
[INFO 09-05 18:04:11] ax.api.client: Generated new trial 5 with parameters {'x1': 0.5065, 'x2': 0.561923, 'x3': 0.517528, 'x4': 0.481156, 'x5': 0.439717, 'x6': 0.435146} using GenerationNode MBM.
[WARNING 09-05 18:04:11] ax.api.client: 3 trials requested but only 1 could be generated.
[INFO 09-05 18:04:11] ax.api.client: Trial 5 marked COMPLETED.
[INFO 09-05 18:04:13] ax.api.client: Generated new trial 6 with parameters {'x1': 0.438719, 'x2': 0.669029, 'x3': 0.412246, 'x4': 0.580589, 'x5': 0.430435, 'x6': 0.48923} using GenerationNode MBM.
[INFO 09-05 18:04:13] ax.api.client: Generated new trial 7 with parameters {'x1': 0.637242, 'x2': 0.532795, 'x3': 0.625694, 'x4': 0.374649, 'x5': 0.386975, 'x6': 0.30531} using GenerationNode MBM.
[INFO 09-05 18:04:13] ax.api.client: Generated new trial 8 with parameters {'x1': 0.401313, 'x2': 0.610131, 'x3': 0.569333, 'x4': 0.481635, 'x5': 0.574634, 'x6': 0.226391} using GenerationNode MBM.
[INFO 09-05 18:04:13] ax.api.client: Trial 6 marked COMPLETED.
[INFO 09-05 18:04:13] ax.api.client: Trial 7 marked COMPLETED.
[INFO 09-05 18:04:13] ax.api.client: Trial 8 marked COMPLETED.
[INFO 09-05 18:04:15] ax.api.client: Generated new trial 9 with parameters {'x1': 0.379687, 'x2': 0.6861, 'x3': 0.629983, 'x4': 0.445402, 'x5': 0.663666, 'x6': 0.135007} using GenerationNode MBM.
[INFO 09-05 18:04:15] ax.api.client: Generated new trial 10 with parameters {'x1': 0.375493, 'x2': 0.172172, 'x3': 0.591914, 'x4': 0.473569, 'x5': 0.468865, 'x6': 0.078563} using GenerationNode MBM.
[INFO 09-05 18:04:15] ax.api.client: Generated new trial 11 with parameters {'x1': 0.37836, 'x2': 0.921201, 'x3': 0.568772, 'x4': 0.273044, 'x5': 0.825244, 'x6': 0.135034} using GenerationNode MBM.
[INFO 09-05 18:04:15] ax.api.client: Trial 9 marked COMPLETED.
[INFO 09-05 18:04:15] ax.api.client: Trial 10 marked COMPLETED.
[INFO 09-05 18:04:15] ax.api.client: Trial 11 marked COMPLETED.
[INFO 09-05 18:04:17] ax.api.client: Generated new trial 12 with parameters {'x1': 0.34327, 'x2': 0.747705, 'x3': 0.676657, 'x4': 0.449193, 'x5': 0.708529, 'x6': 0.065072} using GenerationNode MBM.
[INFO 09-05 18:04:17] ax.api.client: Generated new trial 13 with parameters {'x1': 0.542791, 'x2': 0.673862, 'x3': 0.662588, 'x4': 0.364075, 'x5': 0.720585, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:04:17] ax.api.client: Generated new trial 14 with parameters {'x1': 0.147802, 'x2': 0.765616, 'x3': 0.674693, 'x4': 0.432995, 'x5': 0.695159, 'x6': 0.34678} using GenerationNode MBM.
[INFO 09-05 18:04:17] ax.api.client: Trial 12 marked COMPLETED.
[INFO 09-05 18:04:17] ax.api.client: Trial 13 marked COMPLETED.
[INFO 09-05 18:04:17] ax.api.client: Trial 14 marked COMPLETED.
[INFO 09-05 18:04:19] ax.api.client: Generated new trial 15 with parameters {'x1': 0.361414, 'x2': 0.782061, 'x3': 0.736703, 'x4': 0.48213, 'x5': 0.738145, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:04:19] ax.api.client: Generated new trial 16 with parameters {'x1': 0.352128, 'x2': 0.768235, 'x3': 0.734031, 'x4': 0.30743, 'x5': 0.436042, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:04:19] ax.api.client: Generated new trial 17 with parameters {'x1': 0.356657, 'x2': 0.785277, 'x3': 0.716697, 'x4': 0.65061, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:04:19] ax.api.client: Trial 15 marked COMPLETED.
[INFO 09-05 18:04:19] ax.api.client: Trial 16 marked COMPLETED.
[INFO 09-05 18:04:19] ax.api.client: Trial 17 marked COMPLETED.
[INFO 09-05 18:04:21] ax.api.client: Generated new trial 18 with parameters {'x1': 0.345709, 'x2': 0.83814, 'x3': 0.798793, 'x4': 0.548356, 'x5': 0.931768, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:04:21] ax.api.client: Generated new trial 19 with parameters {'x1': 0.352941, 'x2': 0.91241, 'x3': 0.683746, 'x4': 0.580091, 'x5': 0.733472, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:04:21] ax.api.client: Generated new trial 20 with parameters {'x1': 0.337154, 'x2': 0.73181, 'x3': 0.913537, 'x4': 0.536887, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:04:21] ax.api.client: Trial 18 marked COMPLETED.
[INFO 09-05 18:04:21] ax.api.client: Trial 19 marked COMPLETED.
[INFO 09-05 18:04:21] ax.api.client: Trial 20 marked COMPLETED.
[INFO 09-05 18:04:24] ax.api.client: Generated new trial 21 with parameters {'x1': 0.341671, 'x2': 1.0, 'x3': 0.667461, 'x4': 0.551213, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:04:24] ax.api.client: Generated new trial 22 with parameters {'x1': 0.364355, 'x2': 1.0, 'x3': 0.771647, 'x4': 0.572106, 'x5': 0.365553, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:04:24] ax.api.client: Generated new trial 23 with parameters {'x1': 0.265341, 'x2': 1.0, 'x3': 0.629914, 'x4': 0.562565, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:04:24] ax.api.client: Trial 21 marked COMPLETED.
[INFO 09-05 18:04:24] ax.api.client: Trial 22 marked COMPLETED.
[INFO 09-05 18:04:24] ax.api.client: Trial 23 marked COMPLETED.
[INFO 09-05 18:04:27] ax.api.client: Generated new trial 24 with parameters {'x1': 0.423841, 'x2': 0.905984, 'x3': 0.656219, 'x4': 0.586585, 'x5': 0.227239, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:04:27] ax.api.client: Generated new trial 25 with parameters {'x1': 0.420332, 'x2': 0.911996, 'x3': 0.0, 'x4': 0.581397, 'x5': 0.118944, 'x6': 0.0} using GenerationNode MBM.
[INFO 09-05 18:04:27] ax.api.client: Generated new trial 26 with parameters {'x1': 0.431175, 'x2': 0.910661, 'x3': 1.0, 'x4': 0.592655, 'x5': 0.370647, 'x6': 0.024401} using GenerationNode MBM.
[INFO 09-05 18:04:27] ax.api.client: Trial 24 marked COMPLETED.
[INFO 09-05 18:04:27] ax.api.client: Trial 25 marked COMPLETED.
[INFO 09-05 18:04:27] ax.api.client: Trial 26 marked COMPLETED.`
}
</CellOutput>

## Step 6: Analyze Results

After running trials, you can analyze the results. Most commonly this means extracting
the parameterization from the best performing trial you conducted.

Hartmann6 has a known global minimum of $f(x*) = -3.322$ at
$x* = (0.201, 0.150, 0.477, 0.273, 0.312, 0.657)$. Ax is able to identify a point very
near to this true optimum **using just 30 evaluations.** This is possible due to the
sample-efficiency of [Bayesian optimization](../../intro-to-bo), the optimization method
we use under the hood in Ax.

```python
best_parameters, prediction, index, name = client.get_best_parameterization()
print("Best Parameters:", best_parameters)
print("Prediction (mean, variance):", prediction)
```

<CellOutput>
{
`Best Parameters: {'x1': 0.3529405746594235, 'x2': 0.912410192436556, 'x3': 0.6837462783978993, 'x4': 0.5800910466574406, 'x5': 0.7334720247487982, 'x6': 0.0}
Prediction (mean, variance): {'hartmann6': (np.float64(-2.844120549092117), np.float64(0.0014974001280137325))}`
}
</CellOutput>

## Step 7: Compute Analyses

Ax can also produce a number of analyses to help interpret the results of the experiment
via `client.compute_analyses`. Users can manually select which analyses to run, or can
allow Ax to select which would be most relevant. In this case Ax selects the following:

- **Arm Effects Plots** show the metric value for each
  [arm](https://ax.dev/docs/next/glossary#arm) on the experiment. Ax produces one plot
  using values from its internal surrogate model (this can be helpful for seeing the
  true effect of an arm when evaluations are noisy) and another using the raw metric
  values as observed.
- **Summary** lists all trials generated along with their parameterizations,
  observations, and miscellaneous metadata
- **Sensitivity Analysis Plot** shows which parameters have the largest affect on the
  objective using
  [Sobol Indicies](https://en.wikipedia.org/wiki/Variance-based_sensitivity_analysis)
- **Slice Plot** shows how the model predicts a single parameter effects the objective
  along with a confidence interval
- **Contour Plot** shows how the model predicts a pair of parameters effects the
  objective as a 2D surface
- **Cross Validation** helps to visualize how well the surrogate model is able to
  predict out of sample points

```python
# display=True instructs Ax to sort then render the resulting analyses
cards = client.compute_analyses(display=True)
```

**Modeled Arm Effects on hartmann6**

Modeled effects on hartmann6. This plot visualizes predictions of the true metric
changes for each arm based on Ax's model. This is the expected delta you would expect if
you (re-)ran that arm. This plot helps in anticipating the outcomes and performance of
arms based on the model's predictions. Note, flat predictions across arms indicate that
the model predicts that there is no effect, meaning if you were to re-run the
experiment, the delta you would see would be small and fall within the confidence
interval indicated in the plot.



<PlotlyFigure data={require('./assets/plot_data/7d77d60d-0a5e-4091-a001-ace8065c224c.json')} />


**Observed Arm Effects on hartmann6**

Observed effects on hartmann6. This plot visualizes the effects from previously-run arms
on a specific metric, providing insights into their performance. This plot allows one to
compare and contrast the effectiveness of different arms, highlighting which
configurations have yielded the most favorable outcomes.



<PlotlyFigure data={require('./assets/plot_data/56015bee-b267-4d71-a2d1-c4c3968f3e21.json')} />


**Summary for Experiment**

High-level summary of the `Trial`-s in this `Experiment`




|    |   trial_index |   arm_name | trial_status   | generation_node     |   hartmann6 |       x1 |       x2 |       x3 |       x4 |       x5 |       x6 |
|---:|--------------:|-----------:|:---------------|:--------------------|------------:|---------:|---------:|---------:|---------:|---------:|---------:|
|  0 |             0 |        0_0 | COMPLETED      | CenterOfSearchSpace |   -0.505315 | 0.5      | 0.5      | 0.5      | 0.5      | 0.5      | 0.5      |
|  1 |             1 |        1_0 | COMPLETED      | Sobol               |   -0.073946 | 0.451786 | 0.010206 | 0.232599 | 0.787996 | 0.409147 | 0.338929 |
|  2 |             2 |        2_0 | COMPLETED      | Sobol               |   -0.000602 | 0.960501 | 0.903653 | 0.942044 | 0.027124 | 0.868936 | 0.832959 |
|  3 |             3 |        3_0 | COMPLETED      | Sobol               |   -0.141085 | 0.537996 | 0.336122 | 0.429307 | 0.571709 | 0.664401 | 0.667343 |
|  4 |             4 |        4_0 | COMPLETED      | Sobol               |   -0.248346 | 0.062275 | 0.702228 | 0.653404 | 0.363537 | 0.112693 | 0.160885 |
|  5 |             5 |        5_0 | COMPLETED      | MBM                 |   -0.57614  | 0.5065   | 0.561923 | 0.517528 | 0.481156 | 0.439717 | 0.435146 |
|  6 |             6 |        6_0 | COMPLETED      | MBM                 |   -0.408895 | 0.438719 | 0.669029 | 0.412246 | 0.580589 | 0.430435 | 0.48923  |
|  7 |             7 |        7_0 | COMPLETED      | MBM                 |   -0.411008 | 0.637242 | 0.532795 | 0.625694 | 0.374649 | 0.386975 | 0.30531  |
|  8 |             8 |        8_0 | COMPLETED      | MBM                 |   -1.05062  | 0.401313 | 0.610131 | 0.569333 | 0.481635 | 0.574634 | 0.226391 |
|  9 |             9 |        9_0 | COMPLETED      | MBM                 |   -1.69738  | 0.379687 | 0.6861   | 0.629983 | 0.445402 | 0.663666 | 0.135007 |
| 10 |            10 |       10_0 | COMPLETED      | MBM                 |   -0.147117 | 0.375493 | 0.172172 | 0.591914 | 0.473569 | 0.468865 | 0.078563 |
| 11 |            11 |       11_0 | COMPLETED      | MBM                 |   -1.061    | 0.37836  | 0.921201 | 0.568772 | 0.273044 | 0.825244 | 0.135034 |
| 12 |            12 |       12_0 | COMPLETED      | MBM                 |   -2.12576  | 0.34327  | 0.747705 | 0.676657 | 0.449193 | 0.708529 | 0.065072 |
| 13 |            13 |       13_0 | COMPLETED      | MBM                 |   -0.991792 | 0.542791 | 0.673862 | 0.662588 | 0.364075 | 0.720585 | 0        |
| 14 |            14 |       14_0 | COMPLETED      | MBM                 |   -0.300333 | 0.147802 | 0.765616 | 0.674693 | 0.432995 | 0.695159 | 0.34678  |
| 15 |            15 |       15_0 | COMPLETED      | MBM                 |   -2.47387  | 0.361414 | 0.782061 | 0.736703 | 0.48213  | 0.738145 | 0        |
| 16 |            16 |       16_0 | COMPLETED      | MBM                 |   -1.32286  | 0.352128 | 0.768235 | 0.734031 | 0.30743  | 0.436042 | 0        |
| 17 |            17 |       17_0 | COMPLETED      | MBM                 |   -2.4337   | 0.356657 | 0.785277 | 0.716697 | 0.65061  | 1        | 0        |
| 18 |            18 |       18_0 | COMPLETED      | MBM                 |   -2.70078  | 0.345709 | 0.83814  | 0.798793 | 0.548356 | 0.931768 | 0        |
| 19 |            19 |       19_0 | COMPLETED      | MBM                 |   -2.85718  | 0.352941 | 0.91241  | 0.683746 | 0.580091 | 0.733472 | 0        |
| 20 |            20 |       20_0 | COMPLETED      | MBM                 |   -2.20281  | 0.337154 | 0.73181  | 0.913537 | 0.536887 | 1        | 0        |
| 21 |            21 |       21_0 | COMPLETED      | MBM                 |   -2.40892  | 0.341671 | 1        | 0.667461 | 0.551213 | 1        | 0        |
| 22 |            22 |       22_0 | COMPLETED      | MBM                 |   -2.71569  | 0.364355 | 1        | 0.771647 | 0.572106 | 0.365553 | 0        |
| 23 |            23 |       23_0 | COMPLETED      | MBM                 |   -1.85921  | 0.265341 | 1        | 0.629914 | 0.562565 | 1        | 0        |
| 24 |            24 |       24_0 | COMPLETED      | MBM                 |   -3.09054  | 0.423841 | 0.905984 | 0.656219 | 0.586585 | 0.227239 | 0        |
| 25 |            25 |       25_0 | COMPLETED      | MBM                 |   -2.98578  | 0.420332 | 0.911996 | 0        | 0.581397 | 0.118944 | 0        |
| 26 |            26 |       26_0 | COMPLETED      | MBM                 |   -3.10231  | 0.431175 | 0.910661 | 1        | 0.592655 | 0.370647 | 0.024401 |


**Sensitivity Analysis for hartmann6**

Understand how each parameter affects hartmann6 according to a second-order sensitivity
analysis.



<PlotlyFigure data={require('./assets/plot_data/68c6461f-9a65-4b59-a6a5-c43108bd4044.json')} />


**x6 vs. hartmann6**

The slice plot provides a one-dimensional view of predicted outcomes for hartmann6 as a
function of a single parameter, while keeping all other parameters fixed at their
status_quo value (or mean value if status_quo is unavailable). This visualization helps
in understanding the sensitivity and impact of changes in the selected parameter on the
predicted metric outcomes.



<PlotlyFigure data={require('./assets/plot_data/e972afd0-c8f3-4a0c-b00b-4d29ee31e0f6.json')} />


**x2, x6 vs. hartmann6**

The contour plot visualizes the predicted outcomes for hartmann6 across a
two-dimensional parameter space, with other parameters held fixed at their status_quo
value (or mean value if status_quo is unavailable). This plot helps in identifying
regions of optimal performance and understanding how changes in the selected parameters
influence the predicted outcomes. Contour lines represent levels of constant predicted
values, providing insights into the gradient and potential optima within the parameter
space.



<PlotlyFigure data={require('./assets/plot_data/6d3d43c2-f96a-458d-9703-2371052de2ca.json')} />


**x2, x4 vs. hartmann6**

The contour plot visualizes the predicted outcomes for hartmann6 across a
two-dimensional parameter space, with other parameters held fixed at their status_quo
value (or mean value if status_quo is unavailable). This plot helps in identifying
regions of optimal performance and understanding how changes in the selected parameters
influence the predicted outcomes. Contour lines represent levels of constant predicted
values, providing insights into the gradient and potential optima within the parameter
space.



<PlotlyFigure data={require('./assets/plot_data/7911bc82-577a-415c-bb42-fec300787b16.json')} />


**Cross Validation for hartmann6**

The cross-validation plot displays the model fit for each metric in the experiment. It
employs a leave-one-out approach, where the model is trained on all data except one
sample, which is used for validation. The plot shows the predicted outcome for the
validation set on the y-axis against its actual value on the x-axis. Points that align
closely with the dotted diagonal line indicate a strong model fit, signifying accurate
predictions. Additionally, the plot includes 95% confidence intervals that provide
insight into the noise in observations and the uncertainty in model predictions. A
horizontal, flat line of predictions indicates that the model has not picked up on
sufficient signal in the data, and instead is just predicting the mean.



<PlotlyFigure data={require('./assets/plot_data/072566d3-7a1e-4426-9c55-3a7e885bd0b2.json')} />

## Conclusion

This tutorial demonstrates how to use Ax's `Client` for ask-tell optimization of Python
functions using the Hartmann6 function as an example. You can adjust the function and
parameters to suit your specific optimization problem.

